<resources>
    <string name="app_name">Thought Stream</string>
    <string name="thought_timer_btn_text">Thought Timer</string>
    <string name="new_thought_btn_text">New Thought</string>
    <string name="thought_categories_btn_text">Thought Categories</string>
    <string name="title_hint">Title</string>
    <string name="select_category_text">[Select a Category]</string>
    <string name="button_reset">Reset</string>
    <string name="button_start">Start</string>
    <string name="button_pause">Pause</string>
    <string name="timer_text">00:00:00</string>
    <string name="timer_button_set_text">Set</string>
    <string name="category_name_hint">Category Name</string>
    <string name="create_text">Create</string>
    <string name="title_text">Create A Category</string>
    <string name="timer_activity_num_picker_hours_prompt">Hours</string>
    <string name="timer_activity_num_picker_minutes_prompt">Minutes</string>
    <string name="timer_activity_num_picker_seconds_prompt">Seconds</string>
    <string name="enter_thought_text">Enter thought here</string>
    <string name="choose_a_category_text">Choose a Category</string>
    <string name="new_category_text">New Category</string>
</resources>