<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textColor="?colorOnPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextCategoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:hint="@string/category_name_hint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorSecondary"
        android:cursorVisible="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/create_text"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp"
        app:cornerRadius="40dp" />

</LinearLayout>



