<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.activities.TimerActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fad2e1"
            app:title="@string/thought_timer_btn_text"
            app:titleTextColor="#081768" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/edit_text_input"
        android:layout_width="187dp"
        android:layout_height="56dp"
        android:hint="@string/timer_edit_text_input_hint"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintBottom_toTopOf="@+id/text_view_countdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/button_set"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#081768"
        android:cursorVisible="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/timer_button_set_text"
        android:textSize="20sp"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toEndOf="@+id/edit_text_input"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="188dp"
        android:text="@string/timer_text"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:backgroundTint="#081768"
        android:cursorVisible="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/button_start"
        android:textSize="20sp"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_countdown"
        app:layout_constraintVertical_bias="0.065" />

    <Button
        android:id="@+id/button_pause"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_below="@+id/text_view_countdown"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="128dp"
        android:backgroundTint="#081768"
        android:cursorVisible="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/button_pause"
        android:textSize="20sp"
        android:visibility="invisible"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_reset"
        app:layout_constraintTop_toTopOf="@+id/button_start"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_below="@+id/text_view_countdown"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="128dp"
        android:backgroundTint="#081768"
        android:cursorVisible="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/button_reset"
        android:textSize="20sp"
        android:visibility="invisible"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_start"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_start"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>